--- a/Views/Propietarios/Index.cshtml
+++ b/Views/Propietarios/Index.cshtml
@@ -52,6 +52,9 @@
                 @Html.ActionLink("Borrar", "Delete", new { id=item.Id })
                  }
             </td>
+            <td>
+                @Html.ActionLink("Ver Inmuebles", "Index", "Inmuebles" , new { id = item.Id})
+            </td>
         </tr>
 }
     </tbody>
