--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
                         Inmuebles
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown3">
-                        <li><a class="dropdown-item" asp-area="" asp-controller="Inmuebles" asp-action="Index">Lista Inmuebles</a></li>
+                        <li><a class="dropdown-item" asp-area="" asp-controller="Inmuebles" asp-action="Index" asp-route-id="">Lista Inmuebles</a></li>
                         <li><a class="dropdown-item" asp-area="" asp-controller="Inmuebles" asp-action="Create">Alta Inmueble</a></li>
                     </ul>
                 </li>
@@ -71,7 +71,7 @@
                         Pagos
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown4">
-                  <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Pagos" asp-action="Index">Pagos</a></li>
+                  <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Pagos" asp-action="Index" asp-route-id="">Pagos</a></li>
                 <li><a class="nav-link text-dark" asp-area="" asp-controller="Pagos" asp-action="Create">Alta Pago</a></li>
                     </ul>
                 </li>
