--- a/Views/Inmuebles/Create.cshtml
+++ b/Views/Inmuebles/Create.cshtml
@@ -85,13 +85,13 @@
             </div>
               <div class="form-group">
                 <label  class="control-label">Disponible</label>
-                <select class="form-control" name="PropietarioId">
+                <select class="form-control" name="Disponible">
                 
-                    <option value="true">Disponible</option>
+                    <option value="true" selected>Disponible</option>
                     <option value="false">No Disponible</option>
                 
                 </select>
-                <span asp-validation-for="PropietarioId" class="text-danger"></span>
+                
             </div>
              <div class="form-group">
                 <input type="submit" value="Generar" class="btn btn-primary" />
