--- a/Views/Contratos/Index.cshtml
+++ b/Views/Contratos/Index.cshtml
@@ -1,83 +1,54 @@
 @model IEnumerable<Inmobiliaria.Net.Models.Contrato>
 
-
+@{
+    var monto = ViewBag.MontoRescindido;
+}
 
 <h1>Contratos</h1>
-
 
 <table class="table" id="tablaContratos">
     <thead>
         <tr>
-        
-          <th>
-                N° de Contrato
-            </th>
-           <th>
-                <b>Inmueble</b> 
-            </th>
+            <th>N° de Contrato</th>
+            <th><b>Inmueble</b></th>
+            <th><b>Inquilino</b></th>
+            <th>@Html.DisplayNameFor(model => model.FechaFinal)</th>
+            <th>@Html.DisplayNameFor(model => model.MontoMensual)</th>
+            <th><b>Pagos</b></th>
             <th>
-                <b>Inquilino</b> 
-            </th>
-        
-            <th>
-                @Html.DisplayNameFor(model => model.FechaFinal)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MontoMensual)
-            </th>
-             
-              <th>
-                <b>Pagos</b>
-
-            </th>
-          
-            <th>
-                 <div class="form-group">
-                    <label for="buscarInmueble">Buscar por inmueble</label>
-                    <input type="text" id="buscarInmueble" class="form-control" placeholder="Buscar Inmueble">
-                </div>
+                @if (ViewBag.idInmueble == null)
+                {
+                    <div class="form-group">
+                        <label for="buscarInmueble">Buscar por inmueble</label>
+                        <input type="text" id="buscarInmueble" class="form-control" placeholder="Buscar Inmueble">
+                    </div>
+                }
             </th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            
-          <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-           <td>
-                @item.inmueble.ToString()
-            </td>
-            <td>
-                @item.inquilino.ToString()
-            </td>
-          
-            <td>
-                @Html.DisplayFor(modelItem => item.FechaFinal)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MontoMensual)
-            </td>
-           
-              <td>
-            
-             @Html.ActionLink("Pagos",  "Index", "Pagos",new { id = item.Id }, null) 
-           
-           </td>
-            
-           
-            <td>
-                 @Html.ActionLink("Renovar", "Renovar", new {  id = item.Id }) |
-                @Html.ActionLink("Editar", "Edit", new {  id=item.Id }) |
-                @Html.ActionLink("Detalles", "Details", new { id=item.Id }) |
-                 @if (User.IsInRole("Administrador"))
-    {
-          @Html.ActionLink("BORRAR", "Delete", new { id = item.Id }) 
-    }
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@Html.DisplayFor(modelItem => item.Id)</td>
+                <td>@item.inmueble.ToString()</td>
+                <td>@item.inquilino.ToString()</td>
+                <td>@Html.DisplayFor(modelItem => item.FechaFinal)</td>
+                <td>@Html.DisplayFor(modelItem => item.MontoMensual)</td>
+                <td>@Html.ActionLink("Pagos", "Index", "Pagos", new { id = item.Id }, null)</td>
+                <td>
+                     @if (item.inmueble.Disponible == true){
+                    @Html.ActionLink("Renovar", "Renovar", new { id = item.Id, inmuebleId = item.inmueble.Id }) 
+                    }|
+                    @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
+                    @if (User.IsInRole("Administrador"))
+                    {
+                        @Html.ActionLink("BORRAR", "Delete", new { id = item.Id })
+                    }
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
 
@@ -100,6 +71,11 @@
                     fila.style.display = 'none';
                 }
             });
+        }
+
+        var monto = '@monto';
+        if (monto) {
+            alert("El monto a pagar por rescindir el contrato es: " + monto + ". ");
         }
     });
 </script>
