--- a/Views/Contratos/Vencidos.cshtml
+++ b/Views/Contratos/Vencidos.cshtml
@@ -74,7 +74,9 @@
             
            
             <td>
-               @Html.ActionLink("Renovar", "Renovar", new {  id = item.Id }) |
+              @if (item.inmueble.Disponible == true){
+                    @Html.ActionLink("Renovar", "Renovar", new { id = item.Id, inmuebleId = item.inmueble.Id }) 
+                    }|
                  @Html.ActionLink("Editar", "Edit", new {  id=item.Id }) |
                 @Html.ActionLink("Detalles", "Details", new { id=item.Id }) |
                  @if (User.IsInRole("Administrador"))
