--- a/Views/Contratos/Vigentes.cshtml
+++ b/Views/Contratos/Vigentes.cshtml
@@ -73,9 +73,12 @@
            </td>
            
             <td>
-                @Html.ActionLink("Renovar", "Renovar", new {  id = item.Id }) |
+                @if (item.inmueble.Disponible == true){
+                    @Html.ActionLink("Renovar", "Renovar", new { id = item.Id, inmuebleId = item.inmueble.Id }) 
+                    }|
                  @Html.ActionLink("Editar", "Edit", new {  id=item.Id })|
                 @Html.ActionLink("Detalles", "Details", new { id=item.Id }) |
+                @Html.ActionLink("Rescindir", "Rescindir", new { id=item.Id }) |
                 @if (User.IsInRole("Administrador"))
     {
           @Html.ActionLink("BORRAR", "Delete", new { id = item.Id }) 
